# software-engineering-examples

.circleci/: config.yml
Makefile/basic/: Makefile
Makefile/basic/src/: dance.cpp
Makefile/set/: Makefile  test_default_ctor.cpp  test_int_ctor.cpp
ci/my_stl/: CMakeLists.txt  CTestConfig.cmake
ci/my_stl/src/: CMakeLists.txt
ci/my_stl/src/set/: CMakeLists.txt
ci/my_stl/src/string/: CMakeLists.txt  string.cpp  string.hpp
ci/my_stl/test/: CMakeLists.txt
ci/my_stl/test/set/: CMakeLists.txt
ci/my_stl/test/string/: CMakeLists.txt  test_concat.cpp  test_ctor_char.cpp  test_ctor_charArray.cpp  test_ctor_copy.cpp  test_ctor_default.cpp  test_equal.cpp  test_find_char.cpp  test_find_string.cpp  test_greaterThan.cpp  test_input.cpp  test_len_cap.cpp  test_lessThan.cpp  test_split.cpp  test_subscript.cpp  test_substring.cpp  test_swap_assign.cpp
cmake/basic/: CMakeLists.txt  Makefile  dance.cpp
cmake/my_string/: CMakeLists.txt
cmake/my_string/src/: CMakeLists.txt
cmake/set/: CMakeLists.txt
forward-engineering/: birds.hpp
tdd/: palindrome.cpp  palindrome.hpp  test_palindrome.cpp
